# python-scaffold

./: README.md  docker-compose.dev.yml  docker-compose.yml  python-scaffold.code-workspace
.github/workflows/: test.python_scaffold.yaml
docs/: README.md
docs/cook-book/: README.md  database_migrations_with_alembic.md
docs/guides-and-tips/: README.md  merging-a-pr.md
docs/settings/: README.md
docs/settings/vscode/: README.md  python-docstring-template.mustache
python-scaffold/: .bandit  .flake8  .gitignore  Dockerfile  pyproject.toml  readme.md
python-scaffold/src/python_scaffold/: __init__.py  _logging.py  _settings.py  _utils.py  app.py
python-scaffold/src/python_scaffold/api/: __init__.py  _api.py  _errors.py  _routes.py  _utils.py
python-scaffold/src/python_scaffold/database/: __init__.py  _utils.py  connectors.py  models.py
python-scaffold/src/python_scaffold/sftp/: __init__.py  connector.py
python-scaffold/tests/: conftest.py
python-scaffold/tests/test_python_scaffold/: __init__.py  models.py  test_python_scaffold_version.py
python-scaffold/tests/test_python_scaffold/fixtures/: __init__.py  api.py  database.py  sftp.py
python-scaffold/tests/test_python_scaffold/test_api/: __init__.py  test_api.py
python-scaffold/tests/test_python_scaffold/test_database/: __init__.py  test_connectors.py  test_models.py
python-scaffold/tests/test_python_scaffold/test_sftp/: __init__.py  test_sftp.py
